added the dropdown menu for the nav on larger screens

--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
             <ul id="lg-dd-menu">
                 <li class="lg-dd-item"><a href="#">HOME</a></li>
                 <li class="lg-dd-item"><a href="#">CRUISES</a></li>
-                <li class="lg-dd-item"><a href="#" onclick="lgSubMenu()">AGENTS &#9660;</a></li>
-                <li id="lg-dd-sub-menu">
-                    <a href="#">&bull; LINK 1</a>
-                    <a href="#">&bull; LINK 2</a>
+                <li id="sub-menu-nav">
+                    <a href="#" onclick="lgSubMenu()" class="sub-menu-nav-link">AGENTS &#9660;</a>
+                    <div id="sub-nav" style="display:none;">
+                        <a href="#">&bull; Tony Stark</a>
+                        <a href="#">&bull; Steve Rogers</a>
+                    </div>
                 </li>
                 <li class="lg-dd-item"><a href="#">BOOK</a></li>
             </ul>
@@ -184,10 +186,7 @@
             subNav.style.display = 'none';
         }
         function lgSubMenu() {
-            lgDdSubMenu.style.display = lgDdSubMenu.style.display === 'none' ?
-            'flex'
-            :
-            'none';
+            subNav.style.display = subNav.style.display === 'none' ? 'flex' : 'none';
         }
 
         if ($('.hero-lg').css('display') === 'none') {
